# talk2youtube

./: .gitignore  README.md  fetch_yt_metadata.py  medium_article.md  pyproject.toml  talk2video.py  talk2youtube.py
