[tool.poetry]
name = "talk2youtube"
version = "0.0.1"
description = "Chat with a video"
authors = ["Meir Michanie <meirm@riunx.com>"]
readme = "README.md"
keywords = ["openai", "langchain", "pydantic"]
homepage = "https://github.com/meirm/llm_functions"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.0"
bs4 = "^0.0.2"
llama-index = "^0.9.45"
llama-hub = "^0.0.78"

[metadata.classifiers]
license = "MIT"
license_file = "LICENSE"
description-file = "README.md"

